Fix z-index app-header-layout

--- a/src/elements/core-elements/app-shell-element/app-shell.scss
+++ b/src/elements/core-elements/app-shell-element/app-shell.scss
@@ -12,5 +12,5 @@ app-drawer {
 }
 
 app-header-layout {
-    z-index: 103;
+    z-index: 102;
 }
